tests/typing2/bad/testfile-borrow-2.rs

fn main() { let mut x = 41; let y = & x; x = x + 1; x = *y + 1}
